# LISFLOOD-FP-unibo

./: CMakeLists.txt  CMakeSettings.json  DEM  LISFLOOD-FP user manual.docx  README.md  VersionHistory.h  boundary.cpp  ch_flow.cpp  chkpnt.cpp  compileUbuntuGnu.sh  compileUbuntuGnu_debug.sh  compileUbuntuGnu_juno.sh  compileUbuntuGnu_juno_debug.sh  config.default.cmake  core.vim.295852  fp_acc.cpp  fp_flow.cpp  fp_trent.cpp  infevap.cpp  input.cpp  input_mod.cpp  iterateq.cpp  iterateq_mod.cpp  iterateq_orig.cpp  launch_vs2019_intel64.bat  lisflood.sln  lisflood.vcxproj  lisflood.vcxproj.filters  lisflood_O3  lisflood_debug  lisflood_intel.sln  lisflood_intel.vcxproj  lisflood_mod.cpp  lisflood_mod.h  lisflood_orig.cpp  lisflood_orig.h  make_block0bal0.mk  make_block0bal1.mk  make_block1bal0.mk  make_block1bal1.mk  (+15 more)
config/: sharc-gcc-cpu-debug  sharc-gcc-cpu-juno  sharc-gcc-cpu-juno-debug
cuda/: cuda_boundary.cu  cuda_boundary.cuh  cuda_dem.cu  cuda_dem.cuh  cuda_geometry.cu  cuda_geometry.cuh  cuda_hll.cu  cuda_max_field.cu  cuda_max_field.cuh  cuda_rain.cu  cuda_rain.cuh  cuda_sample.cu  cuda_sample.cuh  cuda_simulate.cu  cuda_simulate.cuh  cuda_snapshot.cuh  cuda_snapshot.templates.cu  cuda_solver.cuh  cuda_solver.templates.cu  cuda_stats.cu  cuda_stats.cuh  cuda_util.cu  cuda_util.cuh  ghostraster.cpp  ghostraster.h  io.cpp  io.h  io.templates.cpp  params.h  sample.cpp  sample.h  stats.cpp  stats.h
cuda/dg2/: cuda_dg2_dem.cu  cuda_dg2_dem.cuh  cuda_dg2_flow.cuh  cuda_dg2_simulate.cu  cuda_dg2_slope_limit.cu  cuda_dg2_snapshot.cu  cuda_dg2_snapshot.cuh  cuda_dg2_solver.cu  cuda_dg2_solver.cuh
cuda/fv1/: cuda_fv1_flow.cuh  cuda_fv1_simulate.cu  cuda_fv1_snapshot.cu  cuda_fv1_snapshot.cuh  cuda_fv1_solver.cu  cuda_fv1_solver.cuh
dep/: boundary.d  ch_flow.d  chkpnt.d  fp_acc.d  fp_flow.d  fp_trent.d  infevap.d  input.d  iterateq.d  lisflood.d  output.d  pars.d  por_flow.d  sgc.d  util.d  utility.d  weir_flow.d
dep/lisflood2/: DataTypes.d  file_tool.d  lis2_output.d  lisflood_processing.d  sgm_fast.d  windows_ext.d
dep/rain/: rain.d
dep/swe/: boundary.d  dg2.d  dg2new.d  fields.d  flux.d  fv1.d  hll.d  input.d  output.d  stats.d
lisflood2/: DataTypes.cpp  DataTypes.h  file_tool.cpp  file_tool.h  lis2_output.cpp  lis2_output.h  lisflood2.h  lisflood_processing.cpp  lisflood_processing.h  sgm_fast.cpp  sgm_fast.h  windows_ext.cpp  windows_ext.h
rain/: rain.tpp
swe/: dg2.cpp  dg2.h  fields.cpp  fv1.cpp
swe/dg2/: fields.cpp  fields.h  friction.cpp  modifiedvars.cpp  modifiedvars.h  slope_limiter.cpp
testing/: lisflood_test2  lisflood_test2_BC
testing/T001_buscot/: buscot.opts  buscot.par  buscot.river  buscot_D.par  buscot_D.river  sargrid.asc
testing/T002_BCTest/: BCTest.par  BCTest_SGC.par  BCTest_SGC_width.ascii
testing/T002b_BCTest/: BCTest.bci  BCTest.gauge  BCTest.par  BCTest_SGC.par  BCTest_SGC_bank.ascii  BCTest_SGC_bed.ascii  BCTest_SGC_width.ascii  BCTest_dtm.ascii  BCTest_in.bci  BCTest_in.bdy  BCTest_in_SGC.par  BCTest_in_start.ascii
testing/T002c_BCTest/: BCTest_EW.bci  BCTest_EW_SGC_bank.ascii  BCTest_EW_SGC_width.ascii  BCTest_EW_c.par  BCTest_EW_c_SGC.par  BCTest_EW_dtm.ascii  BCTest_NS.bci  BCTest_NS_SGC_bank.ascii  BCTest_NS_SGC_width.ascii  BCTest_NS_c.par  BCTest_NS_c_SGC.par  BCTest_NS_dtm.ascii
testing/T003_CTAna/: CTAna_D.par  CTAna_D.river  CTAna_K.par  CTAna_K.river
testing/T004_CTDiffZone/: CTDiffZone_D.par  CTDiffZone_D.river  CTDiffZone_K.par  CTDiffZone_K.river
testing/T005_CTFullZone/: CTFullZone_D.par  CTFullZone_D.river  CTFullZone_K.par  CTFullZone_K.river  CTTests_dem.ascii
testing/T006_CTKinZone/: CTKinZone_D.par  CTKinZone_D.river  CTKinZone_K.par  CTKinZone_K.river
testing/T007_CTBranchFine/: CTBranchFine.river  (+3 more)
(+160 files in other folders)
